<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/colorPrimary"
    android:clickable="true"
    android:longClickable="true"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/name"
            android:paddingBottom="16dp"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/where"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastMod"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/last"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/dim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dim"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/what"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/w" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/h" />
    </RelativeLayout>

    <TextView
        android:id="@+id/setAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/ripple"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/setAs"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>